[package]
name = "rogger"
description = "Logging macros for Rinrin.rs"
version = "0.1.1"
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/Rinrin0413/rogger.git"
readme = "README.md"
keywords = ["rust", "log"]
edition = "2021"

[dependencies]
# chrono = "0.4"
# colored = "2"

[features]
jst = []
utc_jst = []
